@@ -24,6 +24,20 @@ APT-based dependency injection for server-side developers - https://avaje.io/inj
   <scope>provided</scope>
 </dependency>
 ```
+
+**JDK 22+**
+
+In JDK 22+, annotation processors are disabled by default, you will need to add a flag in maven to re-enable the processor.
+```xml
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <configuration>
+    <compilerArgument>-proc:full</compilerArgument>
+  </configuration>
+</plugin>
+```
+
 #### 3. Create a Bean Class annotated with @Singleton
 ```java
 @Singleton
